--- a/.github/workflows/nonoanonymous.yml
+++ b/.github/workflows/nonoanonymous.yml
@@ -1,4 +1,4 @@
-name: Lets Start KaizuryuBot
+name: Lets Start CruellaRobot
 on: push
 jobs:
   build:
@@ -13,7 +13,7 @@ jobs:
       - name: Pull All Updates
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: 'KaizuryuBot'
+          commit_message: 'CruellaRobot'
           commit_options: '--no-verify'
           repository: .
           commit_user_name: RimuruDemonlord
